--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -1,10 +1,9 @@
-.container {
-  max-width: $max-width;
-  margin: auto;
-}
-
 .flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.margin-bottom-40 {
+  margin-bottom: 40px;
 }
