--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -1,7 +1,9 @@
 $max-width: 1200px;
 
-$white: #ffffff;
+$pure-white: #ffffff;
+$almost-white: #a3a3a3;
 $orange: #e84d0a;
-$light-grey: #a3a3a3;
+$light-orange: #f27b47;
+$light-grey: #2e2f32;
 $medium-grey: #191c20;
 $dark-grey: #0e0f12
