--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,5 +1,3 @@
-@import './vars';
-
 .page-host {
   height: 100%;
 }
@@ -12,7 +10,15 @@
 }
 
 .content {
+  background-color: $light-grey;
   float: right;
   height: 100%;
+  padding: 35px 30px;
   width: calc(100% - 300px);
+
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
