--- a/styles/components/teams.scss
+++ b/styles/components/teams.scss
@@ -2,11 +2,42 @@
   background-color: $dark-grey;
   border-radius: 4px;
   color: $pure-white;
-  height: 171px;;
-  padding: 10px;
+  padding: 10px 15px 5px;
+  position: relative;
   width: 92%;
 
+  &-container {
+    height: 131px;;
+  }
+
+  &-actions {
+    color: $orange;
+    position: absolute;
+    right: 15px;
+    text-align: right;
+
+
+    i {
+      margin: 0 5px;
+    }
+  }
+
   &-image {
-    width: 100px;
+    width: 120px;
+  }
+
+  &-data {
+    margin-left: 40px;
+  }
+
+  &-name {
+    font-size: 1.3em;
+    margin: 0 0 5px;
+  }
+
+  &-pts {
+    color: $orange;
+    text-align: right;
+    font-weight: 700;;
   }
 }
