Setup custom select element

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,4 +15,5 @@
 @import 'utils';
 @import 'components/nav-bar';
 @import 'components/buttons';
+@import 'components/inputs';
 @import 'components/teams';
