--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -1,13 +1,33 @@
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+$sizes: 5px, 10px, 15px, 20px, 30px, 40px;
+
+@each $s in $sizes {
+  .margin-top-#{$s} {
+    margin-top: $s;
+  }
+
+  .margin-right-#{$s} {
+    margin-right: $s;
+  }
+
+  .margin-bottom-#{$s} {
+    margin-bottom: $s;
+  }
+
+  .margin-left-#{$s} {
+    margin-left: $s;
+  }
 }
 
-.flex-grow-2 {
-  flex-grow: 2;
+.inline {
+  display: inline;
 }
 
-.margin-bottom-40 {
-  margin-bottom: 40px;
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
 }
